[gd_scene load_steps=15 format=3 uid="uid://bvfncc10i2tkw"]

[ext_resource type="Texture2D" uid="uid://b054duhncw1ia" path="res://Assets/Sprites/Mushroom/Death.png" id="1_2cavq"]
[ext_resource type="Script" uid="uid://bfq7tur2oo520" path="res://Assets/Scripts/mushroom.gd" id="1_sc8t2"]
[ext_resource type="Texture2D" uid="uid://dtub2ic35sjnp" path="res://Assets/Sprites/Mushroom/Idle.png" id="2_sc8t2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4eb1l"]
atlas = ExtResource("1_2cavq")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_08eo0"]
atlas = ExtResource("1_2cavq")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0osnr"]
atlas = ExtResource("1_2cavq")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jy7j"]
atlas = ExtResource("1_2cavq")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr5kk"]
atlas = ExtResource("2_sc8t2")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kswc"]
atlas = ExtResource("2_sc8t2")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpd5s"]
atlas = ExtResource("2_sc8t2")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lynln"]
atlas = ExtResource("2_sc8t2")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_amtcq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eb1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08eo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0osnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jy7j")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr5kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kswc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpd5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lynln")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eygw2"]
height = 36.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4eb1l"]
size = Vector2(38, 21)

[node name="Mushroom" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_sc8t2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["Enemy"]]
sprite_frames = SubResource("SpriteFrames_amtcq")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_eygw2")

[node name="DeathArea1" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea1"]
position = Vector2(0, -21.5)
shape = SubResource("RectangleShape2D_4eb1l")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DeathArea1" to="." method="_on_death_area_1_body_entered"]
